# private-rag-knowledge-base

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  auth.py  dependencies.py  main.py  storage.py
app/api/routes/: analytics.py  auth.py  (+4 more)
app/core/: config.py
app/db/: capabilities.py  health.py  models.py  session.py
app/generation/: providers.py  service.py
app/ingestion/: chunking.py  connectors.py  parsers.py  service.py  store.py
app/models/: analytics.py  audit.py  auth.py  document.py  maintenance.py  query.py  settings.py
app/retrieval/: embeddings.py  fulltext.py  pipeline.py  service.py  types.py
app/services/: analytics_service.py  maintenance_service.py  settings_service.py
docs/: delivery-checklist.md  deployment-runbook.md
examples/knowledge-base/: employee-handbook.md  system-architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  api.ts  components.tsx  state.tsx  styles.css
scripts/: acceptance_check.ps1  check_env.ps1  install_scheduled_backup.ps1  preflight_local_production.ps1  preflight_production.ps1  prepare_production_env.ps1  scheduled_backup.ps1  start_backend.bat  start_backend.ps1  start_backend_prod.ps1  start_frontend.bat  start_frontend.ps1  start_frontend_prod.ps1  start_local_production.ps1  stop_local_production.ps1
tests/: test_local_mode_api.py  test_phase1_ui_api.py  test_phase2_settings_api.py  test_phase3_analytics_api.py  test_smoke.py
(+8 files in other folders)
