[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-service"
version = "0.1.0"
description = "Enterprise-grade RAG knowledge base QA service skeleton."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "openai>=1.76.0,<2.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "psycopg[binary]>=3.2.1,<4.0.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "pypdf>=4.2.0,<7.0.0",
    "python-docx>=1.1.2,<2.0.0",
    "pytest>=8.2.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
